--- a/EgitimPlatformuAI/Views/MainLogin/MainLogin.storyboard
+++ b/EgitimPlatformuAI/Views/MainLogin/MainLogin.storyboard
@@ -12,7 +12,7 @@
         <!--Main Login Screen View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="MainLoginScreenViewController" customModule="EgitimPlatformuAI" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainLogin" id="Y6W-OH-hqX" customClass="MainLoginScreenViewController" customModule="EgitimPlatformuAI" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -26,13 +26,13 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome back! Glad to see you, Again!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fd5-WI-KFq">
-                                <rect key="frame" x="20" y="119" width="353" height="64"/>
-                                <fontDescription key="fontDescription" name="ArialHebrew-Bold" family="Arial Hebrew" pointSize="30"/>
+                                <rect key="frame" x="20" y="119" width="353" height="71.666666666666686"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="jp6-Ea-yY3">
-                                <rect key="frame" x="20" y="203" width="353" height="114"/>
+                                <rect key="frame" x="20" y="210.66666666666663" width="353" height="114"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wTj-vj-Pyc">
                                         <rect key="frame" x="0.0" y="0.0" width="353" height="52"/>
@@ -42,10 +42,10 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="y5r-zH-K88">
-                                        <rect key="frame" x="0.0" y="62" width="353" height="52"/>
+                                        <rect key="frame" x="0.0" y="62.000000000000028" width="353" height="52"/>
                                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                                         <color key="tintColor" name="AccentColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                 </subviews>
@@ -54,32 +54,81 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R7X-tg-sX4">
-                                <rect key="frame" x="245.66666666666666" y="327" width="127.33333333333334" height="35"/>
+                                <rect key="frame" x="245" y="334.66666666666669" width="128" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="aWm-lA-aJR"/>
                                 </constraints>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Forgot password?">
-                                    <fontDescription key="titleFontDescription" name="ArialHebrew-Bold" family="Arial Hebrew" pointSize="12"/>
+                                    <fontDescription key="titleFontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="12"/>
                                 </buttonConfiguration>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dv3-jb-sG4">
+                                <rect key="frame" x="20" y="389.66666666666669" width="353" height="55"/>
+                                <color key="backgroundColor" name="DarkBlue"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="55" id="ObQ-6a-aWJ"/>
+                                    <constraint firstAttribute="height" constant="55" id="WY7-vY-CgS"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Login">
+                                    <fontDescription key="titleFontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="loginButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="i7i-5N-iJc"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HBA-nE-nMS" customClass="SocialLoginView" customModule="EgitimPlatformuAI" customModuleProvider="target">
+                                <rect key="frame" x="20" y="484.66666666666674" width="353" height="100"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="lSs-9z-KN2"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="titleText" value="Or Login with"/>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DSn-FK-9Yz">
+                                <rect key="frame" x="20" y="766" width="353" height="32"/>
+                                <color key="tintColor" name="DarkBlue"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Don't have an account? Register Now">
+                                    <fontDescription key="titleFontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="registerNowButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="ImB-63-AqS"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="HBA-nE-nMS" firstAttribute="top" secondItem="dv3-jb-sG4" secondAttribute="bottom" constant="40" id="0wG-Cl-OC2"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="dv3-jb-sG4" secondAttribute="trailing" constant="20" id="11c-wI-dDj"/>
+                            <constraint firstItem="HBA-nE-nMS" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="1AG-Wg-aSA"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="jp6-Ea-yY3" secondAttribute="trailing" constant="20" id="6Vu-6d-4V7"/>
                             <constraint firstItem="R7X-tg-sX4" firstAttribute="top" secondItem="jp6-Ea-yY3" secondAttribute="bottom" constant="10" id="9VJ-Zu-ZN7"/>
                             <constraint firstItem="jgk-uX-nqU" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="9ss-uo-NFY"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="DSn-FK-9Yz" secondAttribute="trailing" constant="20" id="A4D-Hn-yYz"/>
                             <constraint firstItem="fd5-WI-KFq" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" constant="20" id="CG7-lL-mlk"/>
+                            <constraint firstItem="dv3-jb-sG4" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="GUG-CZ-bdW"/>
                             <constraint firstItem="jp6-Ea-yY3" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="K80-2x-6ES"/>
+                            <constraint firstItem="DSn-FK-9Yz" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="MQx-06-4h0"/>
+                            <constraint firstItem="dv3-jb-sG4" firstAttribute="top" secondItem="R7X-tg-sX4" secondAttribute="bottom" constant="20" id="RP8-8F-m07"/>
                             <constraint firstItem="jgk-uX-nqU" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="cHX-20-gW0"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="R7X-tg-sX4" secondAttribute="trailing" constant="20" id="giL-Dv-d21"/>
                             <constraint firstAttribute="trailing" secondItem="fd5-WI-KFq" secondAttribute="trailing" constant="20" id="m8A-Is-Sy2"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="HBA-nE-nMS" secondAttribute="trailing" constant="20" id="mpr-gE-Ocm"/>
                             <constraint firstItem="jp6-Ea-yY3" firstAttribute="top" secondItem="fd5-WI-KFq" secondAttribute="bottom" constant="20" id="qF9-wc-FpL"/>
                             <constraint firstItem="fd5-WI-KFq" firstAttribute="top" secondItem="jgk-uX-nqU" secondAttribute="bottom" constant="20" id="u5o-kQ-eRp"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="DSn-FK-9Yz" secondAttribute="bottom" constant="20" id="wkh-B0-bI6"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="backButton" destination="jgk-uX-nqU" id="R7s-Im-Oc4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -90,11 +139,14 @@
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="DarkBlue">
+            <color red="0.11764705882352941" green="0.13725490196078433" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
