--- a/EgitimPlatformuAI/CustomViews/HomeScreenCollectionViewCell/HomeScreenCollectionViewCell.xib
+++ b/EgitimPlatformuAI/CustomViews/HomeScreenCollectionViewCell/HomeScreenCollectionViewCell.xib
@@ -11,51 +11,43 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HomeScreenCollectionViewCell" id="gTV-IL-0wX" customClass="HomeScreenCollectionViewCell" customModule="EgitimPlatformuAI" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+            <rect key="frame" x="0.0" y="0.0" width="200" height="100"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                <rect key="frame" x="0.0" y="0.0" width="200" height="100"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" id="IKX-4Y-VVZ">
-                        <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s86-V4-oz5">
+                        <rect key="frame" x="0.0" y="0.0" width="200" height="100"/>
                         <subviews>
-                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ubc-xM-DpQ">
-                                <rect key="frame" x="10" y="10" width="160" height="160"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="251" verticalCompressionResistancePriority="251" image="house" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Pez-k1-MuT">
+                                <rect key="frame" x="10" y="10.333333333333332" width="25" height="24.333333333333339"/>
+                                <color key="tintColor" name="paleGray"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="25" id="OFo-CF-bIT"/>
+                                    <constraint firstAttribute="height" constant="25" id="TsV-ht-hAb"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="DENEME" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DyA-Z3-J5E">
+                                <rect key="frame" x="45" y="10" width="145" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="x8D-tH-moe"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" name="paleGray"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFit" axis="vertical" distribution="fillEqually" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="mhT-Ye-QIb">
+                                <rect key="frame" x="5" y="55" width="190" height="43"/>
                                 <subviews>
-                                    <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="F45-vy-b3y">
-                                        <rect key="frame" x="15" y="10" width="140" height="120"/>
-                                        <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="251" verticalCompressionResistancePriority="251" image="house" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="3hp-NS-FiP">
-                                                <rect key="frame" x="0.0" y="0.33333333333333215" width="50" height="59.333333333333343"/>
-                                                <color key="tintColor" name="paleGray"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="50" id="LuX-bg-aXx"/>
-                                                </constraints>
-                                            </imageView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="vJe-m3-FlM">
-                                                <rect key="frame" x="0.0" y="60" width="100.66666666666667" height="60"/>
-                                                <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ye4-Mn-GpH">
-                                                        <rect key="frame" x="0.0" y="0.0" width="100.66666666666667" height="37.666666666666664"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <color key="textColor" name="paleGray"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="You progressed %34" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RgQ-vQ-tK4">
-                                                        <rect key="frame" x="0.0" y="37.666666666666671" width="100.66666666666667" height="22.333333333333329"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                                        <color key="textColor" name="paleGray"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                </subviews>
-                                            </stackView>
-                                        </subviews>
-                                        <color key="backgroundColor" name="charcoal"/>
-                                    </stackView>
-                                    <progressView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" progress="0.34999999999999998" translatesAutoresizingMaskIntoConstraints="NO" id="A4v-MD-oUd">
-                                        <rect key="frame" x="15" y="136" width="130" height="4"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="You progressed %34" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pZt-xa-GF4">
+                                        <rect key="frame" x="46.333333333333336" y="0.0" width="97.333333333333314" height="19"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-BoldItalic" family="Helvetica Neue" pointSize="10"/>
+                                        <color key="textColor" name="paleGray"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <progressView opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" progress="0.34999999403953552" translatesAutoresizingMaskIntoConstraints="NO" id="nJa-Nr-2T1">
+                                        <rect key="frame" x="30" y="24" width="130" height="19"/>
                                         <color key="backgroundColor" name="paleGray"/>
                                         <color key="progressTintColor" name="mintGreen"/>
                                         <userDefinedRuntimeAttributes>
@@ -67,48 +59,45 @@
                                     </progressView>
                                 </subviews>
                                 <color key="backgroundColor" name="charcoal"/>
-                                <constraints>
-                                    <constraint firstItem="F45-vy-b3y" firstAttribute="top" secondItem="Ubc-xM-DpQ" secondAttribute="top" constant="10" id="1f5-9t-GsV"/>
-                                    <constraint firstAttribute="trailing" secondItem="A4v-MD-oUd" secondAttribute="trailing" constant="15" id="7wV-hw-b4k"/>
-                                    <constraint firstItem="A4v-MD-oUd" firstAttribute="leading" secondItem="Ubc-xM-DpQ" secondAttribute="leading" constant="15" id="N8l-FL-o4U"/>
-                                    <constraint firstItem="F45-vy-b3y" firstAttribute="leading" secondItem="Ubc-xM-DpQ" secondAttribute="leading" constant="15" id="UN2-EV-sxO"/>
-                                    <constraint firstItem="A4v-MD-oUd" firstAttribute="bottom" secondItem="F45-vy-b3y" secondAttribute="bottom" constant="10" id="WWV-bZ-g5a"/>
-                                    <constraint firstAttribute="trailing" secondItem="F45-vy-b3y" secondAttribute="trailing" constant="5" id="bAc-JZ-SDe"/>
-                                    <constraint firstAttribute="bottom" secondItem="A4v-MD-oUd" secondAttribute="bottom" constant="20" id="cLy-x2-drZ"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="12"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
-                                </userDefinedRuntimeAttributes>
-                            </view>
+                            </stackView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="18N-Bh-yFb"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" name="darkBlue"/>
                         <constraints>
-                            <constraint firstItem="Ubc-xM-DpQ" firstAttribute="bottom" secondItem="IKX-4Y-VVZ" secondAttribute="bottom" constant="-10" id="OAf-XP-0JC"/>
-                            <constraint firstAttribute="top" secondItem="Ubc-xM-DpQ" secondAttribute="top" constant="-10" id="fcK-Zj-cDp"/>
-                            <constraint firstItem="Ubc-xM-DpQ" firstAttribute="trailing" secondItem="IKX-4Y-VVZ" secondAttribute="trailing" constant="-10" id="lO5-7e-vdf"/>
-                            <constraint firstAttribute="leading" secondItem="Ubc-xM-DpQ" secondAttribute="leading" constant="-10" id="nmj-yI-lNE"/>
+                            <constraint firstItem="DyA-Z3-J5E" firstAttribute="top" secondItem="s86-V4-oz5" secondAttribute="top" constant="10" id="Czb-il-wbS"/>
+                            <constraint firstItem="DyA-Z3-J5E" firstAttribute="leading" secondItem="Pez-k1-MuT" secondAttribute="trailing" constant="10" id="DnT-K8-IVB"/>
+                            <constraint firstItem="Pez-k1-MuT" firstAttribute="top" secondItem="s86-V4-oz5" secondAttribute="top" constant="10" id="LPr-vv-x2K"/>
+                            <constraint firstItem="mhT-Ye-QIb" firstAttribute="top" secondItem="Pez-k1-MuT" secondAttribute="bottom" constant="20" id="alB-yW-d8a"/>
+                            <constraint firstAttribute="trailing" secondItem="DyA-Z3-J5E" secondAttribute="trailing" constant="10" id="dza-Pm-h6X"/>
+                            <constraint firstAttribute="trailing" secondItem="mhT-Ye-QIb" secondAttribute="trailing" constant="5" id="hYp-DO-Ph5"/>
+                            <constraint firstItem="mhT-Ye-QIb" firstAttribute="leading" secondItem="s86-V4-oz5" secondAttribute="leading" constant="5" id="jqj-Vn-0x0"/>
+                            <constraint firstItem="Pez-k1-MuT" firstAttribute="leading" secondItem="s86-V4-oz5" secondAttribute="leading" constant="10" id="rhJ-ex-Xud"/>
+                            <constraint firstAttribute="bottom" secondItem="mhT-Ye-QIb" secondAttribute="bottom" constant="2" id="uej-t0-MdE"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="137" height="130"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="s86-V4-oz5" secondAttribute="bottom" id="BJV-RI-N2M"/>
+                <constraint firstItem="s86-V4-oz5" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="NpC-z0-AT7"/>
+                <constraint firstAttribute="trailing" secondItem="s86-V4-oz5" secondAttribute="trailing" id="dN8-SN-vhX"/>
+                <constraint firstItem="s86-V4-oz5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="egG-Fg-yA2"/>
+            </constraints>
+            <size key="customSize" width="118" height="34"/>
             <connections>
-                <outlet property="imageView" destination="3hp-NS-FiP" id="udP-po-nOJ"/>
-                <outlet property="labelText" destination="Ye4-Mn-GpH" id="ika-yb-KfI"/>
+                <outlet property="imageView" destination="Pez-k1-MuT" id="GTQ-bC-VzV"/>
+                <outlet property="labelText" destination="DyA-Z3-J5E" id="Pai-4g-0S5"/>
             </connections>
-            <point key="canvasLocation" x="39.694656488549619" y="47.887323943661976"/>
+            <point key="canvasLocation" x="25.190839694656489" y="14.084507042253522"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="house" catalog="system" width="128" height="104"/>
         <namedColor name="charcoal">
             <color red="0.17254901960784313" green="0.20000000000000001" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="darkBlue">
+            <color red="0.11764705882352941" green="0.13725490196078433" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="mintGreen">
             <color red="0.23529411764705882" green="0.81176470588235294" blue="0.56862745098039214" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
