--- a/EgitimPlatformuAI/CustomViews/HomeScreenCourseCollectionView/HomeScreenCourseCollectionViewCell.xib
+++ b/EgitimPlatformuAI/CustomViews/HomeScreenCourseCollectionView/HomeScreenCourseCollectionViewCell.xib
@@ -11,61 +11,62 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HomeScreenCourseCollectionViewCell" id="gTV-IL-0wX" customClass="HomeScreenCourseCollectionViewCell" customModule="EgitimPlatformuAI" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="140" height="110"/>
+            <rect key="frame" x="0.0" y="0.0" width="270" height="170"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="140" height="110"/>
+                <rect key="frame" x="0.0" y="0.0" width="270" height="170"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t95-tM-WIF">
-                        <rect key="frame" x="0.0" y="0.0" width="140" height="110"/>
+                        <rect key="frame" x="0.0" y="0.0" width="270" height="170"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RuH-bV-Ctf">
-                                <rect key="frame" x="10" y="10" width="40" height="40"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Speaking Course" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OKe-dv-2mo">
+                                <rect key="frame" x="10" y="10" width="80" height="60"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="309-em-Mgl"/>
-                                    <constraint firstAttribute="width" constant="40" id="6YW-eL-Qxz"/>
+                                    <constraint firstAttribute="height" constant="60" id="BJE-ja-9CC"/>
+                                    <constraint firstAttribute="width" constant="80" id="JeF-AD-0qv"/>
                                 </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="deneme" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OKe-dv-2mo">
-                                <rect key="frame" x="60" y="10" width="70" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="b21-U8-w0e"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
+                                <color key="textColor" name="softRed"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleAspectFit" horizontalHuggingPriority="252" verticalHuggingPriority="252" translatesAutoresizingMaskIntoConstraints="NO" id="AYC-hP-a8X" customClass="LottieAnimationView" customModule="Lottie">
+                                <rect key="frame" x="100" y="10" width="160" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="xlz-uh-OOV"/>
+                                </constraints>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Just click to enroll in the course." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ROE-e4-xhN">
-                                <rect key="frame" x="10" y="70" width="120" height="30"/>
+                                <rect key="frame" x="10" y="140" width="250" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="EYN-Bm-SIq"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-BoldItalic" family="Helvetica Neue" pointSize="10"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="porcelain"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" name="porcelain"/>
                         <constraints>
-                            <constraint firstItem="ROE-e4-xhN" firstAttribute="top" secondItem="RuH-bV-Ctf" secondAttribute="bottom" constant="20" id="8T1-WY-vgL"/>
-                            <constraint firstItem="OKe-dv-2mo" firstAttribute="leading" secondItem="RuH-bV-Ctf" secondAttribute="trailing" constant="10" id="EP7-VR-J5b"/>
-                            <constraint firstAttribute="bottom" secondItem="ROE-e4-xhN" secondAttribute="bottom" constant="10" id="F01-7E-OGt"/>
-                            <constraint firstItem="RuH-bV-Ctf" firstAttribute="leading" secondItem="t95-tM-WIF" secondAttribute="leading" constant="10" id="GSC-wB-52V"/>
-                            <constraint firstItem="ROE-e4-xhN" firstAttribute="leading" secondItem="t95-tM-WIF" secondAttribute="leading" constant="10" id="I8O-0c-gmq"/>
-                            <constraint firstItem="RuH-bV-Ctf" firstAttribute="top" secondItem="t95-tM-WIF" secondAttribute="top" constant="10" id="J4n-QK-zk5"/>
-                            <constraint firstItem="OKe-dv-2mo" firstAttribute="top" secondItem="t95-tM-WIF" secondAttribute="top" constant="10" id="LTN-hC-E7X"/>
-                            <constraint firstAttribute="trailing" secondItem="ROE-e4-xhN" secondAttribute="trailing" constant="10" id="TOZ-XY-B36"/>
-                            <constraint firstAttribute="trailing" secondItem="OKe-dv-2mo" secondAttribute="trailing" constant="10" id="b4l-HG-E1B"/>
+                            <constraint firstAttribute="bottom" secondItem="ROE-e4-xhN" secondAttribute="bottom" constant="10" id="Aap-ei-ihg"/>
+                            <constraint firstAttribute="trailing" secondItem="ROE-e4-xhN" secondAttribute="trailing" constant="10" id="QPq-VN-8wJ"/>
+                            <constraint firstItem="OKe-dv-2mo" firstAttribute="leading" secondItem="t95-tM-WIF" secondAttribute="leading" constant="10" id="VmO-L6-dsd"/>
+                            <constraint firstItem="AYC-hP-a8X" firstAttribute="leading" secondItem="OKe-dv-2mo" secondAttribute="trailing" constant="10" id="acV-eu-HVR"/>
+                            <constraint firstItem="ROE-e4-xhN" firstAttribute="leading" secondItem="t95-tM-WIF" secondAttribute="leading" constant="10" id="b60-HA-Quv"/>
+                            <constraint firstItem="AYC-hP-a8X" firstAttribute="top" secondItem="t95-tM-WIF" secondAttribute="top" constant="10" id="dGp-4q-qKo"/>
+                            <constraint firstItem="OKe-dv-2mo" firstAttribute="top" secondItem="t95-tM-WIF" secondAttribute="top" constant="10" id="gRq-NE-XQT"/>
+                            <constraint firstAttribute="trailing" secondItem="AYC-hP-a8X" secondAttribute="trailing" constant="10" id="obp-dB-yRH"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="t95-tM-WIF" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="G6g-KT-UUN"/>
-                <constraint firstAttribute="trailing" secondItem="t95-tM-WIF" secondAttribute="trailing" id="IMn-OE-HUV"/>
-                <constraint firstAttribute="bottom" secondItem="t95-tM-WIF" secondAttribute="bottom" id="ItR-jY-51k"/>
-                <constraint firstItem="t95-tM-WIF" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="z0J-zP-o9o"/>
+                <constraint firstItem="t95-tM-WIF" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="3oJ-ll-lLa"/>
+                <constraint firstAttribute="trailing" secondItem="t95-tM-WIF" secondAttribute="trailing" id="9By-2e-3WU"/>
+                <constraint firstItem="t95-tM-WIF" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Jfo-79-rak"/>
+                <constraint firstAttribute="bottom" secondItem="t95-tM-WIF" secondAttribute="bottom" id="tIk-jo-PYq"/>
             </constraints>
-            <size key="customSize" width="152" height="120"/>
+            <size key="customSize" width="281" height="180"/>
             <userDefinedRuntimeAttributes>
                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                     <integer key="value" value="12"/>
@@ -73,15 +74,18 @@
                 <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
             </userDefinedRuntimeAttributes>
             <connections>
-                <outlet property="courseNameLabel" destination="OKe-dv-2mo" id="rCF-ch-Gj8"/>
-                <outlet property="imageView" destination="RuH-bV-Ctf" id="4j7-DP-H0p"/>
+                <outlet property="courseNameLabel" destination="OKe-dv-2mo" id="aIZ-Bh-5g4"/>
+                <outlet property="lottieView" destination="AYC-hP-a8X" id="46Q-xc-eNh"/>
             </connections>
-            <point key="canvasLocation" x="207.63358778625954" y="44.366197183098592"/>
+            <point key="canvasLocation" x="283.96946564885496" y="58.802816901408455"/>
         </collectionViewCell>
     </objects>
     <resources>
         <namedColor name="porcelain">
             <color red="0.96862745098039216" green="0.97254901960784312" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="softRed">
+            <color red="0.94901960784313721" green="0.42745098039215684" blue="0.42745098039215684" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
