--- a/EgitimPlatformuAI/CustomViews/HomeScreenCollectionViewCell/HomeScreenCollectionViewCell.xib
+++ b/EgitimPlatformuAI/CustomViews/HomeScreenCollectionViewCell/HomeScreenCollectionViewCell.xib
@@ -11,42 +11,25 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HomeScreenCollectionViewCell" id="gTV-IL-0wX" customClass="HomeScreenCollectionViewCell" customModule="EgitimPlatformuAI" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="200" height="120"/>
+            <rect key="frame" x="0.0" y="0.0" width="150" height="220"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="200" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="150" height="220"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s86-V4-oz5">
-                        <rect key="frame" x="0.0" y="0.0" width="200" height="120"/>
+                        <rect key="frame" x="0.0" y="0.0" width="150" height="220"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="251" verticalCompressionResistancePriority="251" image="house" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Pez-k1-MuT">
-                                <rect key="frame" x="10" y="10.333333333333332" width="25" height="24.333333333333339"/>
-                                <color key="tintColor" name="paleGray"/>
+                            <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ByD-RD-yJv" customClass="MBCircularProgressBarView">
+                                <rect key="frame" x="25" y="20" width="100" height="100"/>
+                                <color key="tintColor" name="softRed"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="25" id="OFo-CF-bIT"/>
-                                    <constraint firstAttribute="height" constant="25" id="TsV-ht-hAb"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="Deneme" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DyA-Z3-J5E">
-                                <rect key="frame" x="45" y="10" width="145" height="25"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="x8D-tH-moe"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
-                                <color key="textColor" name="paleGray"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ByD-RD-yJv" customClass="MBCircularProgressBarView">
-                                <rect key="frame" x="65" y="45" width="70" height="70"/>
-                                <color key="backgroundColor" name="darkBlue"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="70" id="8bl-s4-uci"/>
-                                    <constraint firstAttribute="width" constant="70" id="aC1-ku-tGz"/>
+                                    <constraint firstAttribute="height" constant="100" id="GuU-se-dQ2"/>
+                                    <constraint firstAttribute="width" constant="100" id="bZp-dg-IMa"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="value">
-                                        <real key="value" value="50"/>
+                                        <real key="value" value="20"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="maxValue">
                                         <real key="value" value="100"/>
@@ -57,45 +40,79 @@
                                     <userDefinedRuntimeAttribute type="color" keyPath="progressColor">
                                         <color key="value" name="mintGreen"/>
                                     </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="progressStrokeColor">
-                                        <color key="value" name="mintGreen"/>
-                                    </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="progressLineWidth">
-                                        <real key="value" value="5"/>
+                                        <real key="value" value="10"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="progressAngle">
                                         <real key="value" value="100"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="string" keyPath="valueFontName" value="Helvetica Neue Bold"/>
                                     <userDefinedRuntimeAttribute type="number" keyPath="valueFontSize">
-                                        <real key="value" value="10"/>
+                                        <real key="value" value="15"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="unitFontSize">
-                                        <real key="value" value="10"/>
+                                        <real key="value" value="15"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="string" keyPath="unitFontName" value="Helvetica Neue Bold"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="emptyLineWidth">
+                                        <real key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="progressCapType">
+                                        <integer key="value" value="0"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="valueDecimalFontSize">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="Writing Course" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DyA-Z3-J5E">
+                                <rect key="frame" x="10" y="130" width="130" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="ndX-wd-ecb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                <color key="textColor" name="softRed"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="gCr-AU-vQK">
+                                <rect key="frame" x="9.9999999999999929" y="190" width="112.33333333333331" height="20"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1" verticalHuggingPriority="1" text="20 Lessons" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pxA-Ha-oRe">
+                                        <rect key="frame" x="0.0" y="0.0" width="81.333333333333329" height="20"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="17"/>
+                                        <color key="textColor" name="porcelain"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="· A1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SH5-t6-bZc">
+                                        <rect key="frame" x="83.333333333333329" y="0.0" width="29" height="20"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="17"/>
+                                        <color key="textColor" name="porcelain"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="AFC-u1-Akv"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
-                        <color key="backgroundColor" name="darkBlue"/>
                         <constraints>
-                            <constraint firstItem="DyA-Z3-J5E" firstAttribute="top" secondItem="s86-V4-oz5" secondAttribute="top" constant="10" id="Czb-il-wbS"/>
-                            <constraint firstItem="DyA-Z3-J5E" firstAttribute="leading" secondItem="Pez-k1-MuT" secondAttribute="trailing" constant="10" id="DnT-K8-IVB"/>
-                            <constraint firstItem="Pez-k1-MuT" firstAttribute="top" secondItem="s86-V4-oz5" secondAttribute="top" constant="10" id="LPr-vv-x2K"/>
-                            <constraint firstItem="ByD-RD-yJv" firstAttribute="top" secondItem="DyA-Z3-J5E" secondAttribute="bottom" constant="10" id="Vwn-Q9-YUd"/>
-                            <constraint firstItem="ByD-RD-yJv" firstAttribute="centerX" secondItem="s86-V4-oz5" secondAttribute="centerX" id="d8x-ot-Roo"/>
-                            <constraint firstAttribute="trailing" secondItem="DyA-Z3-J5E" secondAttribute="trailing" constant="10" id="dza-Pm-h6X"/>
-                            <constraint firstItem="Pez-k1-MuT" firstAttribute="leading" secondItem="s86-V4-oz5" secondAttribute="leading" constant="10" id="rhJ-ex-Xud"/>
+                            <constraint firstAttribute="trailing" secondItem="DyA-Z3-J5E" secondAttribute="trailing" constant="10" id="206-u7-iKF"/>
+                            <constraint firstItem="DyA-Z3-J5E" firstAttribute="leading" secondItem="s86-V4-oz5" secondAttribute="leading" constant="10" id="2OA-Q7-vLU"/>
+                            <constraint firstItem="DyA-Z3-J5E" firstAttribute="top" secondItem="ByD-RD-yJv" secondAttribute="bottom" constant="10" id="FDL-HY-ASb"/>
+                            <constraint firstAttribute="bottom" secondItem="gCr-AU-vQK" secondAttribute="bottom" constant="10" id="GyY-da-TDO"/>
+                            <constraint firstItem="ByD-RD-yJv" firstAttribute="top" secondItem="s86-V4-oz5" secondAttribute="top" constant="20" id="HEv-SC-M8j"/>
+                            <constraint firstItem="gCr-AU-vQK" firstAttribute="leading" secondItem="s86-V4-oz5" secondAttribute="leading" constant="10" id="JYQ-dd-5fL"/>
+                            <constraint firstItem="ByD-RD-yJv" firstAttribute="centerX" secondItem="s86-V4-oz5" secondAttribute="centerX" id="jSp-Tb-fbq"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="s86-V4-oz5" secondAttribute="bottom" id="BJV-RI-N2M"/>
-                <constraint firstItem="s86-V4-oz5" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="NpC-z0-AT7"/>
-                <constraint firstAttribute="trailing" secondItem="s86-V4-oz5" secondAttribute="trailing" id="dN8-SN-vhX"/>
-                <constraint firstItem="s86-V4-oz5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="egG-Fg-yA2"/>
+                <constraint firstItem="s86-V4-oz5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="3gv-vr-Pic"/>
+                <constraint firstItem="s86-V4-oz5" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="j7m-6a-7Bv"/>
+                <constraint firstAttribute="bottom" secondItem="s86-V4-oz5" secondAttribute="bottom" id="m3H-DD-pM7"/>
+                <constraint firstAttribute="trailing" secondItem="s86-V4-oz5" secondAttribute="trailing" id="ypC-60-Zmt"/>
             </constraints>
             <size key="customSize" width="117" height="34"/>
             <userDefinedRuntimeAttributes>
@@ -105,22 +122,26 @@
                 <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
             </userDefinedRuntimeAttributes>
             <connections>
-                <outlet property="imageView" destination="Pez-k1-MuT" id="GTQ-bC-VzV"/>
-                <outlet property="labelText" destination="DyA-Z3-J5E" id="Pai-4g-0S5"/>
+                <outlet property="courseName" destination="DyA-Z3-J5E" id="aXu-Pc-ETt"/>
+                <outlet property="lessonLabel" destination="pxA-Ha-oRe" id="S0j-dL-MsQ"/>
+                <outlet property="levelLabel" destination="SH5-t6-bZc" id="ngx-Dr-lXE"/>
+                <outlet property="progressView" destination="ByD-RD-yJv" id="ICI-fX-0UG"/>
             </connections>
             <point key="canvasLocation" x="22.900763358778626" y="14.084507042253522"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="house" catalog="system" width="128" height="104"/>
-        <namedColor name="darkBlue">
-            <color red="0.11764705882352941" green="0.13725490196078433" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="mintGreen">
             <color red="0.23529411764705882" green="0.81176470588235294" blue="0.56862745098039214" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="paleGray">
             <color red="0.88235294117647056" green="0.89411764705882357" blue="0.90980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="porcelain">
+            <color red="0.96862745098039216" green="0.97254901960784312" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="softRed">
+            <color red="0.94901960784313721" green="0.42745098039215684" blue="0.42745098039215684" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
