--- a/EgitimPlatformuAI/Views/MainScreen/Base.lproj/MainScreen.storyboard
+++ b/EgitimPlatformuAI/Views/MainScreen/Base.lproj/MainScreen.storyboard
@@ -6,6 +6,7 @@
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -31,54 +32,73 @@
                                     <constraint firstAttribute="height" constant="100" id="gQ2-wg-VJD"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Continue Course" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QiV-Uu-rhd">
+                                <rect key="frame" x="10" y="160" width="382" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="FK4-t3-o0X"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
+                                <color key="textColor" name="charcoal"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="maW-RO-0Cj">
-                                <rect key="frame" x="0.0" y="160" width="402" height="150"/>
+                                <rect key="frame" x="0.0" y="190" width="402" height="250"/>
                                 <color key="backgroundColor" name="paleGray"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="uVd-9g-nEe"/>
+                                    <constraint firstAttribute="height" constant="250" id="uVd-9g-nEe"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="DZe-tB-ua4">
-                                    <size key="itemSize" width="200" height="120"/>
+                                    <size key="itemSize" width="150" height="220"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="rWS-d1-LFN" customClass="HomeScreenCollectionViewCell" customModule="EgitimPlatformuAI" customModuleProvider="target">
-                                        <rect key="frame" x="10" y="25" width="200" height="100"/>
+                                        <rect key="frame" x="10" y="15" width="150" height="220"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="200" height="100"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="220"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </view>
-                                        <size key="customSize" width="200" height="100"/>
+                                    </collectionViewCell>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="BkW-6a-TEp">
+                                        <rect key="frame" x="170" y="15" width="150" height="220"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="piX-Fe-3pJ">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="220"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Courses" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L4E-nM-gSH">
-                                <rect key="frame" x="20" y="340" width="362" height="50"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Featured Courses" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L4E-nM-gSH">
+                                <rect key="frame" x="10" y="450" width="382" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Biz-ZU-Gu4"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="23"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
+                                <color key="textColor" name="charcoal"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="AuW-VA-f6H">
-                                <rect key="frame" x="0.0" y="420" width="402" height="400"/>
+                                <rect key="frame" x="0.0" y="500" width="402" height="200"/>
                                 <color key="backgroundColor" name="paleGray"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="20" id="gOd-Pd-uM8">
-                                    <size key="itemSize" width="170" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="IDv-z5-T8B"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="30" minimumInteritemSpacing="10" id="gOd-Pd-uM8">
+                                    <size key="itemSize" width="270" height="170"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="YWB-gm-mbk" customClass="HomeScreenCourseCollectionViewCell" customModule="EgitimPlatformuAI" customModuleProvider="target">
-                                        <rect key="frame" x="10" y="10" width="170" height="150"/>
+                                        <rect key="frame" x="10" y="15" width="270" height="170"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="170" height="150"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="270" height="170"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </view>
                                     </collectionViewCell>
@@ -88,20 +108,22 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="paleGray"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="AuW-VA-f6H" secondAttribute="bottom" constant="20" id="3Dc-G4-04e"/>
-                            <constraint firstItem="L4E-nM-gSH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="5tg-b0-ZzE"/>
+                            <constraint firstItem="L4E-nM-gSH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="5tg-b0-ZzE"/>
                             <constraint firstItem="rjf-lY-w2j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9RJ-ir-Ofw"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4u2-oV-Dgl" secondAttribute="trailing" id="9oS-WY-8P8"/>
                             <constraint firstItem="rjf-lY-w2j" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="9v9-k2-TJh"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rjf-lY-w2j" secondAttribute="trailing" id="Cii-2c-SFl"/>
+                            <constraint firstItem="QiV-Uu-rhd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="EMN-ju-kel"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QiV-Uu-rhd" secondAttribute="trailing" constant="10" id="Iyf-Fz-pZi"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="AuW-VA-f6H" secondAttribute="trailing" id="LB8-KB-IbP"/>
                             <constraint firstItem="4u2-oV-Dgl" firstAttribute="top" secondItem="rjf-lY-w2j" secondAttribute="bottom" id="Whp-gC-Wvk"/>
-                            <constraint firstItem="AuW-VA-f6H" firstAttribute="top" secondItem="L4E-nM-gSH" secondAttribute="bottom" constant="30" id="gNA-wp-IOq"/>
+                            <constraint firstItem="AuW-VA-f6H" firstAttribute="top" secondItem="L4E-nM-gSH" secondAttribute="bottom" id="gNA-wp-IOq"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="maW-RO-0Cj" secondAttribute="trailing" id="iUf-hM-VBC"/>
                             <constraint firstItem="AuW-VA-f6H" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="jXX-LJ-biT"/>
-                            <constraint firstItem="L4E-nM-gSH" firstAttribute="top" secondItem="maW-RO-0Cj" secondAttribute="bottom" constant="30" id="odf-Ge-jeG"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="L4E-nM-gSH" secondAttribute="trailing" constant="20" id="pxl-rY-ezO"/>
-                            <constraint firstItem="maW-RO-0Cj" firstAttribute="top" secondItem="4u2-oV-Dgl" secondAttribute="bottom" constant="10" id="q9Q-Ig-OTV"/>
+                            <constraint firstItem="maW-RO-0Cj" firstAttribute="top" secondItem="QiV-Uu-rhd" secondAttribute="bottom" id="oV0-gk-oJD"/>
+                            <constraint firstItem="L4E-nM-gSH" firstAttribute="top" secondItem="maW-RO-0Cj" secondAttribute="bottom" constant="10" id="odf-Ge-jeG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="L4E-nM-gSH" secondAttribute="trailing" constant="10" id="pxl-rY-ezO"/>
+                            <constraint firstItem="QiV-Uu-rhd" firstAttribute="top" secondItem="4u2-oV-Dgl" secondAttribute="bottom" constant="10" id="sfF-rM-lvj"/>
                             <constraint firstItem="maW-RO-0Cj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tDy-NV-Mke"/>
                             <constraint firstItem="4u2-oV-Dgl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="u6i-58-cF1"/>
                         </constraints>
@@ -118,6 +140,9 @@
         </scene>
     </scenes>
     <resources>
+        <namedColor name="charcoal">
+            <color red="0.17254901960784313" green="0.20000000000000001" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="darkBlue">
             <color red="0.11764705882352941" green="0.13725490196078433" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
