--- a/EgitimPlatformuAI/CustomViews/HomeScreenCollectionViewCell/HomeScreenCollectionViewCell.xib
+++ b/EgitimPlatformuAI/CustomViews/HomeScreenCollectionViewCell/HomeScreenCollectionViewCell.xib
@@ -75,17 +75,17 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="gCr-AU-vQK">
-                                <rect key="frame" x="9.9999999999999929" y="190" width="112.33333333333331" height="20"/>
+                                <rect key="frame" x="10.000000000000007" y="190" width="116.66666666666669" height="20"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1" verticalHuggingPriority="1" text="20 Lessons" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pxA-Ha-oRe">
-                                        <rect key="frame" x="0.0" y="0.0" width="81.333333333333329" height="20"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="85" height="20"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-LightItalic" family="Helvetica Neue" pointSize="17"/>
                                         <color key="textColor" name="porcelain"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="· A1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SH5-t6-bZc">
-                                        <rect key="frame" x="83.333333333333329" y="0.0" width="29" height="20"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="17"/>
+                                        <rect key="frame" x="87" y="0.0" width="29.666666666666671" height="20"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-LightItalic" family="Helvetica Neue" pointSize="17"/>
                                         <color key="textColor" name="porcelain"/>
                                         <nil key="highlightedColor"/>
                                     </label>
