listening Screen and AI Configure

--- a/EgitimPlatformuAI/CustomViews/BackButton/CustomBackButtonView.xib
+++ b/EgitimPlatformuAI/CustomViews/BackButton/CustomBackButtonView.xib
@@ -20,13 +20,13 @@
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tUn-Rc-wOO">
                     <rect key="frame" x="11" y="11" width="19" height="19"/>
-                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="tintColor" systemColor="systemGray2Color"/>
                     <state key="normal" title="Button"/>
                     <buttonConfiguration key="configuration" style="plain"/>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="tUn-Rc-wOO" secondAttribute="bottom" constant="11" id="5EM-6e-XYq"/>
                 <constraint firstItem="tUn-Rc-wOO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="11" id="DrW-ic-PMD"/>
@@ -38,8 +38,8 @@
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
